--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -54,6 +54,11 @@ img {
   border-radius: 5px;
 }
 
+img.emoji {
+display: inline;
+margin: 0;
+}
+
 table {
   margin-bottom: 1rem;
   width: 100%;
